<resources>
    <string name="application_name">Coinz</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <!-- TODO: Should the colon be here or at location of invocation? -->
    <string name="coin_marker_title">Coin</string>
    <string name="coin_marker_snippet">Value</string>
    <string name="log_out_prompt">Logged out!</string>

    <!-- LogInActivity -->

    <!-- Layout -->
    <string name="log_in_heading">Log In</string>
    <string name="log_in_email_hint">Email</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="log_in_create_account"><u>New to Coinz? Create an account!</u></string>

    <!-- Toasts -->
    <string name="log_in_enter_email_prompt">Please enter an email address!</string>
    <string name="log_in_enter_password_prompt">Please enter a password!</string>
    <string name="log_in_success_prompt">Logged in!</string>
    <string name="log_in_failure_prompt">Log in failed!</string>

    <!-- CreateAccountActivity -->

    <!-- Layout -->
    <string name="create_acc_heading">Account Creation</string>
    <string name="create_acc_email_hint">Email</string>
    <string name="create_acc_password_hint">Password</string>
    <string name="create_acc_button_text">Create Account</string>
    <string name="create_acc_log_in"><u>Already have a Coinz account? Log in!</u></string>

    <!-- Toasts -->
    <string name="create_acc_enter_email_prompt">Please enter an email address!</string>
    <string name="create_acc_enter_password_prompt">Please enter a password!</string>
    <string name="create_acc_password_short_prompt">Password must be at least 6 characters!</string>
    <string name="create_acc_success_prompt">Account created!</string>
    <string name="create_acc_failure_prompt">Account creation failed!</string>

    <!-- Navigation Drawer -->
    <string name="nav_header_title">Coinz</string>
    <string name="nav_map">Map</string>
    <string name="nav_local_wallet">Local Wallet</string>
    <string name="nav_central_bank">Central Bank</string>
    <string name="nav_log_out">Log Out</string>

    <!-- CollectCoinDialogFragment -->
    <string name="coin_collect_value_desc">Value:</string>
    <string name="coin_collect_dist_desc">Distance:</string>
    <string name="coin_collect_dist_unit">m</string>
    <string name="confirm_coin_collection">Collect</string>
    <string name="cancel_coin_collection">Cancel</string>

    <!-- LocalWallet -->
    <string name="coin_card_value_desc">Value:</string>
    <string name="coin_card_store_button">Store</string>
    <string name="coin_card_send_button">Send</string>

    <!-- StoreCoinDialogFragment -->
    <string name="store_coin_question">Store Coin?</string>
    <string name="store_coin_curr_gold_desc">Current GOLD:</string>
    <string name="store_coin_new_gold_desc">Updated GOLD:</string>
    <string name="store_coin_store_button">Store</string>
    <string name="store_coin_cancel_button">Cancel</string>

    <!-- CentralBank -->
    <string name="central_bank_title"><u>Central Bank</u></string>
    <string name="central_bank_gold_desc">Current amount of GOLD:</string>
</resources>
