<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/coin_card_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="QUID"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coin_card_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/coin_card_currency"
            app:layout_constraintTop_toBottomOf="@+id/coin_card_currency"
            tools:text="b0cf-c240-bcba-9661-fde2-e985" />

        <TextView
            android:id="@+id/coin_card_value_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/coin_card_value_desc"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/coin_card_currency"
            app:layout_constraintTop_toBottomOf="@+id/coin_card_id" />

        <TextView
            android:id="@+id/coin_card_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4sp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/coin_card_value_desc"
            app:layout_constraintTop_toBottomOf="@+id/coin_card_id"
            tools:text="6.919867246692419" />

        <Button
            android:id="@+id/coin_store_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/coin_card_store_button"
            app:layout_constraintTop_toBottomOf="@+id/coin_card_value_desc"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/coin_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/coin_card_send_button"
            app:layout_constraintTop_toBottomOf="@+id/coin_card_value_desc"
            app:layout_constraintEnd_toStartOf="@+id/coin_store_button"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>